--- a/Library_server/dockerTest002/appsettings.json
+++ b/Library_server/dockerTest002/appsettings.json
@@ -9,5 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "urls": "http://0.0.0.0:8080"
+
 }
