--- a/Library_server/dockerTest002/appsettings.json
+++ b/Library_server/dockerTest002/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConn": "Server=MATEUSZRYSZAWYL;Database=BD_semestr_V;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConn": "Server=172.17.0.2;Database=BD_semestr_V;User Id=sa;Password=Mateusz12345;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,7 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "urls": "http://0.0.0.0:8080"
-
+  "AllowedHosts": "*"
 }
