--- a/Library_server/dockerTest002/appsettings.json
+++ b/Library_server/dockerTest002/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConn": "Server=172.17.0.2;Database=BD_semestr_V;User Id=sa;Password=Mateusz12345;TrustServerCertificate=True;"
+    "DefaultConn": "Server=mati_db;Database=BD_semestr_V;User Id=sa;Password=Mateusz12345;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
