autentykacja tokenem, kosmetyczne zmiany w metodach BooksController. konfiguracja tokena w appsetings

--- a/Library_server/dockerTest002/appsettings.json
+++ b/Library_server/dockerTest002/appsettings.json
@@ -1,6 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConn": "Server=172.17.0.2;Database=BD_semestr_V;User Id=sa;Password=Mateusz12345;TrustServerCertificate=True;"
+    "DefaultConn": "Server=172.20.0.2;Database=BD_semestr_V;User Id=sa;Password=Mateusz12345;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "34B8PKD4789NDSS889FD53AD31467C52DBE53ED2SDG5D8D82DDNMNDSA",
+    "Issuer": "PSIssuer",
+    "Audience": "PSAudience",
+    "ExpireMinutes": 15
   },
   "Logging": {
     "LogLevel": {
